# cookiecutter-cli-skeleton

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  copier.yml  pyproject.toml
template/{{repo_name}}/: README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
template/{{repo_name}}/.github/workflows/: docs.yml
template/{{repo_name}}/src/{{package_name}}/config/: schemas.py.jinja
{{cookiecutter.__project_slug}}/: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/: main.py
{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/config/: schemas.py
{{project_slug}}/: README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
{{project_slug}}/src/{{package_name}}/config/: schemas.py.jinja
