[project]
name = "{{ cookiecutter.__project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
  { name = "{{ cookiecutter.full_name }}" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # these are the current versions as of the creation of this template
  "mkdocs-material>=9.5.49",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7",
  "typer>=0.15.1",
]

scripts.{{ cookiecutter.__project_slug }} = "{{ cookiecutter.__package_name }}.main:main"

[dependency-groups]
dev = [
  "pre-commit>=3.5",
  "pytest>=8.3.4",
]
